--- a/todolist.html
+++ b/todolist.html
@@ -1,10 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list</title>
+    <style>
+        .done{
+            text-decoration: line-through;
+            color:gray;
+            opacity: 0.6;
+            cursor: not-allowed;
+        }
+    </style>
 </head>
 <body>
     <h1>To do list</h1>
@@ -18,7 +25,7 @@
 
 <script>
 
- function addTask(){
+    function addTask(){
         const taskText = getTaskText();
 
         if (taskText){
@@ -38,26 +45,82 @@
     function addTaskItem(taskText){
         const li = document.createElement("li");
         li.textContent = taskText;
-         document.getElementById("taskList").appendChild(li);
-        console.log("addTaskItem() called -> ",taskText,Date());
         
-        const deleteBtn = cretedetebutton(li);
-        li.appendChild(deleteBtn);
-    }
-function cretedeletebutton(li){
-  const deletebtn = document.createElement("button"); 
-  deleteBtn.textContent = " X ";
-  deleteBtn.className = "delete-Btn";
-  deleteBtn.style.marginLeft = "8px";
-  deleteBtn.onclick = () => handleDeleteclick(li);
 
-  console.log("createDeletebutton() called-> ",li.textContent);
-  return (deleteBtn);
-}
-function handletaskclick(li){
-    console.log("handlDeleteclick()-> ", li.textcontent.replace(" X ","").trim(),Date());
-    li.remove();
-}
+        document.getElementById("taskList").appendChild(li);
+        console.log("addTaskItem() called -> ",taskText,Date());
+
+        const deleteBtn = createDeleteButton(li);
+        li.appendChild(deleteBtn);
+
+        const taskSpan = document.createElement("span");
+        taskSpan.textContent = taskText;
+        const editBtn = createEditButton(li,taskSpan);
+        li.appendChild(editBtn);
+
+        const doneBtn = createDoneButton(li);
+        li.appendChild(doneBtn);
+    }
+
+    function createDeleteButton(li){
+        const deleteBtn = document.createElement("button");
+        deleteBtn.textContent = " Delete ";
+        deleteBtn.className = "delete-btn";
+        deleteBtn.style.marginLeft = "8px";
+        deleteBtn.onclick = () => handleDeleteClick(li);
+
+        console.log("createDeleteButton() called ->", li.textContent);
+        return deleteBtn;
+    }
+
+    function handleDeleteClick(li){
+        console.log("handleDeleteClick() ->", li.textContent.replace(" X ","").trim(),Date());
+        li.remove();
+    }
+
+    function createEditButton(li,taskSpan){
+        const editBtn = document.createElement("button");
+        editBtn.textContent = "Edit";
+        editBtn.className = "edit-btn";
+        editBtn.style.marginLeft = "8px";
+        editBtn.onclick = () => handleEditClick(li);
+
+        console.log("createEditButton() called ->:", taskSpan.textContent);
+        return editBtn;
+    }
+
+    function handleEditClick(li){
+        const currentText = li.firstChild.textContent.trim();
+        console.log("handleEditClick() -> current:", currentText, Date());
+
+        const newText = prompt("Edit your task",  currentText);
+
+        if(newText !== null && newText.trim() !==""){
+            li.firstChild.textContent = newText.trim();
+            console.log("handleEditClick() -> updated to: ", newText.trim(), Date());
+        } else {
+            console.log("handleEditClick -> no changes made");
+        }
+    }
+
+    function createDoneButton(li){
+        const doneBtn = document.createElement("button");
+        doneBtn.textContent = "Done";
+        doneBtn.style.marginLeft = "8px";
+        doneBtn.onclick = () =>{
+            console.log(li);
+            li.classList.add("done");
+            const buttons = li.querySelectorAll("button");
+
+                buttons.forEach(btn => {
+                    btn.disabled = true;
+                });
+
+            console.log("Task Completed", li.textContent, Date());
+        }
+        return doneBtn;
+    }
+
 </script>
 </body>
 </html>
