updated maps.html and map.json

--- a/maps.html
+++ b/maps.html
@@ -41,12 +41,29 @@ var map = L.map('map').setView([8.360302114528377, 124.8684101925283], 17);
       fetch('mapDataUrl')
         .then(response => response.json())
         .then(data => {
-            data.forEach(location => {
+            data.forEach(pin=>{
+
+
                 const marker = L.marker([location.lat, location.lng]).addTo(map);
-                marker.bindPopup(`<b>${location.name}</b><br>${location.description}`);
-                console.log('${pin.name} loaded + Date()')
+
+                const img = `<imgsr='${pin.img}' class"popup-Image">`;
+                marker.bindPopup(`
+                $(img) <br>
+                <b>${pin.title}<br>
+                ${pin.description}
+            `);
+
+                console.log(`${pin.name} loaded` + Date());
+
+
+
+                 (err=>console.error(`Error loading JSON:`,err));
             });
         })
+        
+
+
+
         .catch(error => console.error('Error loading map data:', error));
 
         var amker = L.marker([8.3593,1224.8691]).addTo(map);
